# KTRawViewer

./: CMakeLists.txt  CMakeLists.txt.autosave.KqkHmg  CMakeLists.txt.cYKZTT  README.md
src/: CMakeLists.txt  KTRawViewer.lnk  main.cpp
src/AppController/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/Theme/: CMakeLists.txt  theme_manager.h
src/ui/: CMakeLists.txt  mainwindow.cpp
